[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://ui/components/AbilityScoreRow.gd" id="1_0"]
[ext_resource type="Theme" path="res://themes/bg3_theme.tres" id="2_0"]

[node name="AbilityScoreRow" type="HBoxContainer"]
theme = ExtResource("2_0")
script = ExtResource("1_0")

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Strength"

[node name="BaseLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "8"
horizontal_alignment = 1

[node name="BonusLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "+0"
horizontal_alignment = 1
visible = false

[node name="FinalLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "10"
horizontal_alignment = 1

[node name="ModLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "+0"
horizontal_alignment = 1

[node name="MinusButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "-"

[node name="PlusButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "+"
